--- a/content/templates/content/studylog_detail_month.html
+++ b/content/templates/content/studylog_detail_month.html
@@ -3,7 +3,7 @@
   <script src="https://kit.fontawesome.com/330fa5bd85.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css"
     href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-  <link rel="stylesheet" href="base.css">
+  <link rel="stylesheet" href="./..//../static/css/base.css">
   <link rel="stylesheet" href="./../../static/css/compare_graph.css">
   <link rel="stylesheet" href="./../../static/css/tab.css">
   <style>
