--- a/content/templates/content/home-after-login.html
+++ b/content/templates/content/home-after-login.html
@@ -95,15 +95,15 @@
             <ul>
               <li>
                 <span class="count">{{time}}</span>
-                <span>total</span>
+                <span>合計(分)</span>
               </li>
               <li>
                 <span class="count">{{week_time}}</span>
-                <span>week</span>
+                <span>週(分)</span>
               </li>
               <li>
                 <span class="count">{{today_time}}</span>
-                <span>today</span>
+                <span>今日(分)</span>
               </li>
             </ul>
           </div>
@@ -230,7 +230,7 @@
       .attr("x", "-5em")
       .attr("y", "-2.5em")
       .style("text-anchor", "end")
-      .text("総学習時間");
+      .text("総学習時間(分)");
 
 
     function type(d) {
