--- a/content/templates/content/studylog_detail_total.html
+++ b/content/templates/content/studylog_detail_total.html
@@ -94,7 +94,7 @@
         <ul class="nav2">
           <li style="border-radius:10px 0px 0px 10px;"><a href="{% url 'studyapp:detail_total' %}">合計</a></li>
           <li><a href="{% url 'studyapp:detail_month' %}">月</a></li>
-          <li><a href="#">週</a></li>
+          <li><a href="{% url 'studyapp:detail_week'%}">週</a></li>
           <li style="border-radius:0px 10px 10px 0px;"><a href="{% url 'studyapp:detail_day' %}">日</a></li>
         </ul>
       </li>
