--- a/content/templates/content/EditStudylog_after_search.html
+++ b/content/templates/content/EditStudylog_after_search.html
@@ -1,7 +1,7 @@
 <head>
   <link rel="stylesheet" type="text/css"
     href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
-  <link rel="stylesheet" href="./../../static/css/edit_studylog.css">
+  <link rel="stylesheet" href="./../../../static/css/edit_studylog.css">
   <script src="https://kit.fontawesome.com/330fa5bd85.js" crossorigin="anonymous"></script>
 </head>
 
