--- a/content/templates/content/studylog_detail_month.html
+++ b/content/templates/content/studylog_detail_month.html
@@ -108,11 +108,11 @@
             <i class="fas fa-sync"></i>
           </button>
         </form>
-        <p class="ub-bar-graph__title">合計時間</p>
+        <p class="ub-bar-graph__title">合計時間(月)</p>
         <dl>
           <div>
             <dt class="ub-bar-graph__em" style="width:{{total_width}}%;">
-              <span class="ub-bar-graph__content">全体合計</span>
+              <span class="ub-bar-graph__content">全体合計(月)</span>
             </dt>
             <dd>
               <span class="ub-bar-graph__value">{{total}}分</span>
